--- a/layouts/partials/doc/publish_with_reply.html
+++ b/layouts/partials/doc/publish_with_reply.html
@@ -15,6 +15,12 @@
 		
 	
 		
+		<li class="api-lang" data-language="js">
+		  <a data-toggle="tab" href="#publish_with_reply-js">JavaScript</a>
+		</li>
+		
+	
+		
 		<li class="api-lang" data-language="py">
 		  <a data-toggle="tab" href="#publish_with_reply-py">Python</a>
 		</li>
@@ -91,6 +97,25 @@ System.out.println(new String(msg.getData(), StandardCharsets.UTF_8));
 
 // Close the connection
 nc.close();
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="publish_with_reply-js"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/node-nats-examples/blob/master/src/publisher_samples.js#L41-57"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-javascript">// set up a subscription to process the request
+nc.subscribe(&#39;time&#39;, (msg, reply) =&gt; {
+    if(reply) {
+        nc.publish(reply, new Date().toLocaleTimeString());
+    }
+});
+
+// create a subscription subject that the responding send replies to
+let inbox = NATS.createInbox();
+nc.subscribe(inbox, {max: 1}, (msg) =&gt; {
+    t.log(&#39;the time is&#39;, msg);
+    nc.close();
+});
+
+nc.publish(&#39;time&#39;, &#34;&#34;, inbox);
 </code></pre>
 		
 	
