--- a/layouts/partials/doc/reconnect_5mb.html
+++ b/layouts/partials/doc/reconnect_5mb.html
@@ -15,6 +15,12 @@
 		
 	
 		
+		<li class="api-lang" data-language="py">
+		  <a data-toggle="tab" href="#reconnect_5mb-py">Python</a>
+		</li>
+		
+	
+		
 		<li class="api-lang" data-language="ruby">
 		  <a data-toggle="tab" href="#reconnect_5mb-ruby">Ruby</a>
 		</li>
@@ -46,6 +52,11 @@ Connection nc = Nats.connect(options);
 // Do something with the connection
 
 nc.close();
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="reconnect_5mb-py"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/asyncio-nats-examples/blob/master/notapplicable.txt#L1-3"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-python"># Asyncio NATS client currentply does not implement a reconnect buffer
 </code></pre>
 		
 	
