--- a/layouts/partials/doc/connect_multiple.html
+++ b/layouts/partials/doc/connect_multiple.html
@@ -15,6 +15,12 @@
 		
 	
 		
+		<li class="api-lang" data-language="js">
+		  <a data-toggle="tab" href="#connect_multiple-js">JavaScript</a>
+		</li>
+		
+	
+		
 		<li class="api-lang" data-language="py">
 		  <a data-toggle="tab" href="#connect_multiple-py">Python</a>
 		</li>
@@ -63,6 +69,20 @@ Connection nc = Nats.connect(options);
 // Do something with the connection
 
 nc.close();
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="connect_multiple-js"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/node-nats-examples/blob/master/src/connection_samples.js#L67-78"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-javascript">let nc = NATS.connect({servers: [&#34;nats://demo.nats.io:4222&#34;, &#34;nats://localhost:4222&#34;]});
+nc.on(&#39;connect&#39;, (c) =&gt; {
+    // Do something with the connection
+    doSomething();
+    // When done close it
+    nc.close();
+});
+nc.on(&#39;error&#39;, (err) =&gt; {
+    failed(err);
+});
 </code></pre>
 		
 	
