--- a/layouts/partials/doc/subscribe_json.html
+++ b/layouts/partials/doc/subscribe_json.html
@@ -15,6 +15,18 @@
 		
 	
 		
+		<li class="api-lang" data-language="js">
+		  <a data-toggle="tab" href="#subscribe_json-js">JavaScript</a>
+		</li>
+		
+	
+		
+		<li class="api-lang" data-language="py">
+		  <a data-toggle="tab" href="#subscribe_json-py">Python</a>
+		</li>
+		
+	
+		
 		<li class="api-lang" data-language="ruby">
 		  <a data-toggle="tab" href="#subscribe_json-ruby">Ruby</a>
 		</li>
@@ -111,6 +123,46 @@ public class SubscribeJSON {
         }
     }
 }
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="subscribe_json-js"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/node-nats-examples/blob/master/src/subscriber_samples.js#L76-88"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-javascript">let nc = NATS.connect({
+    url: &#34;nats://demo.nats.io:4222&#34;,
+    json: true
+});
+
+nc.subscribe(&#39;updates&#39;, (msg) =&gt; {
+    if(msg &amp;&amp; msg.ticker === &#39;TSLA&#39;) {
+        t.log(&#39;got message:&#39;, msg);
+    }
+});
+
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="subscribe_json-py"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/asyncio-nats-examples/blob/master/subscribe_json.py#L1-23"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-python">import asyncio
+import json
+from nats.aio.client import Client as NATS
+from nats.aio.errors import ErrTimeout
+
+async def run(loop):
+    nc = NATS()
+
+    await nc.connect(servers=[&#34;nats://127.0.0.1:4222&#34;], loop=loop)
+
+    async def message_handler(msg):
+        data = json.loads(msg.data.decode())
+        print(data)
+
+    sid = await nc.subscribe(&#34;updates&#34;, cb=message_handler)
+    await nc.flush()
+
+    await nc.auto_unsubscribe(sid, 2)
+    await nc.publish(&#34;updates&#34;, json.dumps({&#34;symbol&#34;: &#34;GOOG&#34;, &#34;price&#34;: 1200 }).encode())
+    await asyncio.sleep(1, loop=loop)
+    await nc.close()
 </code></pre>
 		
 	
