--- a/layouts/partials/doc/unsubscribe.html
+++ b/layouts/partials/doc/unsubscribe.html
@@ -15,6 +15,12 @@
 		
 	
 		
+		<li class="api-lang" data-language="js">
+		  <a data-toggle="tab" href="#unsubscribe-js">JavaScript</a>
+		</li>
+		
+	
+		
 		<li class="api-lang" data-language="py">
 		  <a data-toggle="tab" href="#unsubscribe-py">Python</a>
 		</li>
@@ -82,6 +88,20 @@ d.unsubscribe(&#34;updates&#34;);
 
 // Close the connection
 nc.close();
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="unsubscribe-js"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/node-nats-examples/blob/master/src/subscriber_samples.js#L54-65"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-javascript">// set up a subscription to process a request
+let sub = nc.subscribe(NATS.createInbox(), (msg, reply) =&gt; {
+    if (msg.reply) {
+        nc.publish(reply, new Date().toLocaleTimeString());
+    }
+});
+
+// without arguments the subscription will cancel when the server receives it
+// you can also specify how many messages are expected by the subscription
+nc.unsubscribe(sub);
 </code></pre>
 		
 	
